[gd_scene load_steps=34 format=3 uid="uid://b4hrdpl5dijvs"]

[ext_resource type="Script" uid="uid://dhkyapc38n0xe" path="res://scenes/objects/player/player.gd" id="1_0owmy"]
[ext_resource type="Texture2D" uid="uid://bbtim2up15msd" path="res://sprites/player/fall.png" id="3_0owmy"]
[ext_resource type="Texture2D" uid="uid://cra0lg6vdlokr" path="res://sprites/player/jump.png" id="3_75vfm"]
[ext_resource type="Texture2D" uid="uid://1ymshet4dsas" path="res://sprites/player/walk.png" id="3_i3pqv"]
[ext_resource type="Texture2D" uid="uid://d1fpj01ihpfyl" path="res://sprites/player/ratspin.png" id="3_p47bc"]
[ext_resource type="Script" uid="uid://b8c4nq70htbfp" path="res://scenes/objects/player/attack.gd" id="3_yw30f"]
[ext_resource type="Texture2D" uid="uid://bb6nm7yo2jyki" path="res://sprites/player/rat_scratch_forward.png" id="4_qjkh3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qk4a2"]
size = Vector2(12, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcs02"]
atlas = ExtResource("3_0owmy")
region = Rect2(0, 0, 24, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_myrg7"]
atlas = ExtResource("3_0owmy")
region = Rect2(24, 0, 24, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3pqv"]
atlas = ExtResource("3_i3pqv")
region = Rect2(0, 0, 24, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_gx1jg"]
atlas = ExtResource("3_75vfm")
region = Rect2(0, 0, 24, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_ugbui"]
atlas = ExtResource("3_75vfm")
region = Rect2(24, 0, 24, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqtel"]
atlas = ExtResource("3_i3pqv")
region = Rect2(24, 0, 24, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqy"]
atlas = ExtResource("3_i3pqv")
region = Rect2(48, 0, 24, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hs0m"]
atlas = ExtResource("3_i3pqv")
region = Rect2(72, 0, 24, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_p47bc"]
atlas = ExtResource("3_p47bc")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_75vfm"]
atlas = ExtResource("3_p47bc")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0owmy"]
atlas = ExtResource("3_p47bc")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qek5x"]
atlas = ExtResource("3_p47bc")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gtgg"]
atlas = ExtResource("3_p47bc")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_h17s1"]
atlas = ExtResource("3_p47bc")
region = Rect2(120, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_je7p5"]
atlas = ExtResource("3_p47bc")
region = Rect2(144, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fm80t"]
atlas = ExtResource("3_p47bc")
region = Rect2(168, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_hqtel"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcs02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_myrg7")
}],
"loop": true,
"name": &"falling",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3pqv")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gx1jg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugbui")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3pqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hs0m")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p47bc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75vfm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0owmy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qek5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gtgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h17s1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_je7p5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fm80t")
}],
"loop": false,
"name": &"spin",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3pqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hs0m")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_yw30f"]
atlas = ExtResource("4_qjkh3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjkh3"]
atlas = ExtResource("4_qjkh3")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6k8r"]
atlas = ExtResource("4_qjkh3")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_boad6"]
atlas = ExtResource("4_qjkh3")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_17371"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yw30f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjkh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6k8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_boad6")
}],
"loop": false,
"name": &"attack",
"speed": 20.0
}]

[sub_resource type="Animation" id="Animation_je7p5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_h17s1"]
resource_name = "invulnerable"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_je7p5"]
_data = {
&"RESET": SubResource("Animation_je7p5"),
&"invulnerable": SubResource("Animation_h17s1")
}

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("PlayerSprite", "PlayerCollider", "animation_player") groups=["player"]]
collision_layer = 6
script = ExtResource("1_0owmy")
PlayerSprite = NodePath("AnimatedSprite2D")
PlayerCollider = NodePath("CollisionShape2D")
animation_player = NodePath("AnimationPlayer")
timeToReachZeroSpeed = 0.1
jumpBuffering = 0.1
wallJump = true
inputPauseAfterWallJump = 0.2
wallSliding = 2.5
canRoll = true
run = true
jump = true
idle = true
walk = true
falling = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_qk4a2")
debug_color = Color(0, 0.6, 0, 0.419608)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_hqtel")
animation = &"run"

[node name="DownwardAttack" type="Node2D" parent="."]
visible = false
position = Vector2(0, 17)
script = ExtResource("3_yw30f")
attack_direction = Vector2(0, 1)
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="DownwardAttack"]
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_17371")
animation = &"attack"

[node name="Hitbox" type="Area2D" parent="DownwardAttack"]
collision_layer = 0
collision_mask = 3
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="DownwardAttack/Hitbox"]
position = Vector2(7, -22)
scale = Vector2(2, 2)
polygon = PackedVector2Array(-10, 13, -4, 15.5, 1.5, 13, 3.5, 10, 5.9125, 5, -14.5, 5, -12, 10)

[node name="RecoveryTimer" type="Timer" parent="DownwardAttack"]
wait_time = 0.1
one_shot = true

[node name="RightAttack" type="Node2D" parent="."]
visible = false
script = ExtResource("3_yw30f")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="RightAttack"]
position = Vector2(22.905, 1)
sprite_frames = SubResource("SpriteFrames_17371")
animation = &"attack"

[node name="Hitbox" type="Area2D" parent="RightAttack"]
position = Vector2(22.905, 0)
collision_layer = 0
collision_mask = 3
monitoring = false
monitorable = false
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="RightAttack/Hitbox"]
position = Vector2(10, 7)
scale = Vector2(2, 2)
polygon = PackedVector2Array(-10.5, -8.5, -6, -11, 0.5, -7, 0.5, 0.5, -2, 3.5, -10.5, 3.5, -10.5, -2)

[node name="RecoveryTimer" type="Timer" parent="RightAttack"]
wait_time = 0.1
one_shot = true

[node name="LeftAttack" type="Node2D" parent="."]
scale = Vector2(-1, 1)
script = ExtResource("3_yw30f")
attack_direction = Vector2(-1, 0)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="LeftAttack"]
position = Vector2(22.905, 1)
sprite_frames = SubResource("SpriteFrames_17371")
animation = &"attack"

[node name="Hitbox" type="Area2D" parent="LeftAttack"]
position = Vector2(22.905, 0)
collision_layer = 0
collision_mask = 3
monitoring = false
monitorable = false
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="LeftAttack/Hitbox"]
position = Vector2(10, 7)
scale = Vector2(2, 2)
polygon = PackedVector2Array(-10.5, -8.5, -6, -11, 0.5, -7, 0.5, 0.5, -2, 3.5, -10.5, 3.5, -10.5, -2)

[node name="RecoveryTimer" type="Timer" parent="LeftAttack"]
wait_time = 0.1
one_shot = true

[node name="UpwardAttack" type="Node2D" parent="."]
visible = false
position = Vector2(-1, -3)
script = ExtResource("3_yw30f")
attack_direction = Vector2(0, -1)
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="UpwardAttack"]
position = Vector2(0, -16)
rotation = -1.5708
sprite_frames = SubResource("SpriteFrames_17371")
animation = &"attack"

[node name="Hitbox" type="Area2D" parent="UpwardAttack"]
collision_layer = 0
collision_mask = 3
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="UpwardAttack/Hitbox"]
position = Vector2(8.825, -10)
scale = Vector2(2, 2)
polygon = PackedVector2Array(-10, -5, -3.5875, -7, 1.4125, -5, 3.4125, -2, 5.9125, 5, -14.5, 5, -12, -1.5)

[node name="RecoveryTimer" type="Timer" parent="UpwardAttack"]
wait_time = 0.1
one_shot = true

[node name="OwieBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="OwieBox"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_qk4a2")
debug_color = Color(0, 0.6, 0, 0.419608)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_je7p5")
}

[connection signal="attack_finished" from="DownwardAttack" to="." method="_on_downward_attack_attack_finished"]
[connection signal="animation_finished" from="DownwardAttack/AnimatedSprite2D" to="DownwardAttack" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="DownwardAttack/Hitbox" to="DownwardAttack" method="_on_hitbox_body_entered"]
[connection signal="timeout" from="DownwardAttack/RecoveryTimer" to="DownwardAttack" method="_on_recovery_timer_timeout"]
[connection signal="attack_finished" from="RightAttack" to="." method="_on_forward_attack_attack_finished"]
[connection signal="animation_finished" from="RightAttack/AnimatedSprite2D" to="RightAttack" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="RightAttack/Hitbox" to="RightAttack" method="_on_hitbox_body_entered"]
[connection signal="timeout" from="RightAttack/RecoveryTimer" to="RightAttack" method="_on_recovery_timer_timeout"]
[connection signal="attack_finished" from="LeftAttack" to="." method="_on_forward_attack_attack_finished"]
[connection signal="animation_finished" from="LeftAttack/AnimatedSprite2D" to="LeftAttack" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="LeftAttack/Hitbox" to="LeftAttack" method="_on_hitbox_body_entered"]
[connection signal="timeout" from="LeftAttack/RecoveryTimer" to="LeftAttack" method="_on_recovery_timer_timeout"]
[connection signal="attack_finished" from="UpwardAttack" to="." method="_on_upward_attack_attack_finished"]
[connection signal="animation_finished" from="UpwardAttack/AnimatedSprite2D" to="UpwardAttack" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="UpwardAttack/Hitbox" to="UpwardAttack" method="_on_hitbox_body_entered"]
[connection signal="timeout" from="UpwardAttack/RecoveryTimer" to="UpwardAttack" method="_on_recovery_timer_timeout"]
[connection signal="area_entered" from="OwieBox" to="." method="_on_owie_box_area_entered"]
[connection signal="body_entered" from="OwieBox" to="." method="_on_owie_box_body_entered"]
